fix(box): fix spacing system props and remove css props

--- a/website/pages/docs/changelog.mdx
+++ b/website/pages/docs/changelog.mdx
@@ -9,6 +9,13 @@ order: 7
 
 `Camara` strictly follows [semantic versioning](https://semver.org/)
 
+## September 2021
+
+- `Box Component`:
+  - Remove `css` props for additional css properties
+  - Clean up other properties
+  - Fix spacing system props
+
 ## August 2021
 
 - `Flex Component`:
