--- a/website/pages/docs/components/box.mdx
+++ b/website/pages/docs/components/box.mdx
@@ -61,7 +61,7 @@ import { Box, Flex, BrowserWindow } from 'camara';
 
 render(
   <BrowserWindow docs>
-    <Box width={700} center>
+    <Box center width={600}>
       <Box height={100} bg="#82CAFF" />
       <Flex justifyContent="space-between">
         <Box height={100} width={200} bg="#82CAFF" />
@@ -81,7 +81,7 @@ import { Box, Flex, BrowserWindow } from 'camara';
 
 render(
   <BrowserWindow docs>
-    <Box width={700}>
+    <Box width={500}>
       <Box border height={100} bg="#82CAFF" />
       <Flex justify="space-between">
         <Box border height={100} width={200} bg="#82CAFF" />
@@ -121,7 +121,7 @@ import { Box, Flex, BrowserWindow } from 'camara';
 
 render(
   <BrowserWindow docs>
-    <Box debug p={16} center width={700}>
+    <Box debug p={16} center width={500}>
       <Box debug m={8} border height={100} bg="#82CAFF" />
       <Flex justifyContent="space-between">
         <Box debug m={8} border height={100} width={200} bg="#82CAFF" />
@@ -143,7 +143,7 @@ import { Box, Flex, BrowserWindow } from 'camara';
 
 render(
   <BrowserWindow docs>
-    <Box width={700}>
+    <Box center width={500}>
       <Box border height={100} bg="#82CAFF" />
       <Flex justifyContent="space-between">
         <Box border height={100} width={200} bg="#82CAFF" />
@@ -171,7 +171,7 @@ import { Box, Flex, BrowserWindow } from 'camara';
 
 render(
   <BrowserWindow docs>
-    <Box width={700}>
+    <Box center width={500}>
       <Box border height={100} bg="#82CAFF" />
       <Flex justify="space-between">
         <Box border height={100} width={200} bg="#82CAFF" />
@@ -193,7 +193,7 @@ import { Box, Flex, BrowserWindow } from 'camara';
 
 render(
   <BrowserWindow docs>
-    <Box width={700}>
+    <Box center width={500}>
       <Box border height={100} bg="#82CAFF" />
       <Flex justify="space-between">
         <Box py={16} border height={100} width={200} bg="#82CAFF" />
@@ -221,7 +221,7 @@ import { Box, Flex, BrowserWindow } from 'camara';
 
 render(
   <BrowserWindow docs>
-    <Box width={700}>
+    <Box center width={500}>
       <Box border height={100} bg="#82CAFF" />
       <Flex justify="space-between">
         <Box py={16} border height={100} width={200} bg="#82CAFF" />
