--- a/website/pages/docs/components/button.mdx
+++ b/website/pages/docs/components/button.mdx
@@ -48,7 +48,7 @@ Button properties
 import { Button, BrowserWindow } from 'camara';
 
 render(
-  <BrowserWindow>
+  <BrowserWindow docs>
     <Button variant="primary">Primary</Button>
     <Button variant="secondary">Secondary</Button>
     <Button variant="ghost">Ghost</Button>
@@ -62,7 +62,7 @@ render(
 import { Button, BrowserWindow } from 'camara';
 
 render(
-  <BrowserWindow>
+  <BrowserWindow docs>
     <Button size="large">Large</Button>
     <Button size="medium">Medium</Button>
     <Button size="small">Small</Button>
@@ -76,7 +76,7 @@ render(
 import { Button, BrowserWindow } from 'camara';
 
 render(
-  <BrowserWindow>
+  <BrowserWindow docs>
     <Button disabled variant="primary">
       Primary
     </Button>
@@ -98,7 +98,7 @@ render(
 import { Button, BrowserWindow } from 'camara';
 
 render(
-  <BrowserWindow>
+  <BrowserWindow docs>
     <Button danger variant="primary">
       Primary
     </Button>
@@ -120,7 +120,7 @@ render(
 import { Button, BrowserWindow } from 'camara';
 
 render(
-  <BrowserWindow>
+  <BrowserWindow docs>
     <Button pill variant="primary">
       Primary
     </Button>
@@ -142,7 +142,7 @@ render(
 import { Button, BrowserWindow } from 'camara';
 
 render(
-  <BrowserWindow>
+  <BrowserWindow docs>
     <Button block variant="primary">
       Primary
     </Button>
@@ -164,7 +164,7 @@ render(
 import { Button, BrowserWindow } from 'camara';
 
 render(
-  <BrowserWindow>
+  <BrowserWindow docs>
     <Button pill variant="primary" backgroundColor="green">
       Primary
     </Button>
@@ -186,7 +186,7 @@ render(
 import { Button, BrowserWindow } from 'camara';
 
 render(
-  <BrowserWindow>
+  <BrowserWindow docs>
     <Button pill variant="primary" backgroundColor="#fff" color="purple">
       Primary
     </Button>
