--- a/website/pages/docs/components/card.mdx
+++ b/website/pages/docs/components/card.mdx
@@ -42,7 +42,7 @@ Card properties
 import { Button, Card, Image, Text, BrowserWindow } from 'camara';
 
 render(
-  <BrowserWindow>
+  <BrowserWindow docs>
     <Card elevate>
       <Image
         src="https://source.unsplash.com/V_WBdOLOgJU/400x300"
@@ -63,7 +63,7 @@ render(
 import { Box, Button, Card, Image, Text, Spacer, BrowserWindow } from 'camara';
 
 render(
-  <BrowserWindow>
+  <BrowserWindow docs>
     <Box>
       <Box>
         <Card>
