--- a/website/pages/docs/components/divider.mdx
+++ b/website/pages/docs/components/divider.mdx
@@ -39,7 +39,7 @@ Divider properties
 import { Divider, BrowserWindow } from 'camara';
 
 render(
-  <BrowserWindow>
+  <BrowserWindow docs>
     <Divider />
   </BrowserWindow>
 );
@@ -51,7 +51,7 @@ render(
 import { Box, Divider, BrowserWindow } from 'camara';
 
 render(
-  <BrowserWindow>
+  <BrowserWindow docs>
     <Box>
       <Divider type="dashed" />
       <Divider type="dotted" />
