--- a/website/pages/docs/components/flex.mdx
+++ b/website/pages/docs/components/flex.mdx
@@ -44,7 +44,7 @@ Flex properties
 import { Flex, Image, BrowserWindow } from 'camara';
 
 render(
-  <BrowserWindow>
+  <BrowserWindow docs>
     <Flex>
       <Image
         width="25%"
@@ -80,7 +80,7 @@ render(
 import { Flex, Image, BrowserWindow } from 'camara';
 
 render(
-  <BrowserWindow>
+  <BrowserWindow docs>
     <Flex direction="column">
       <Image
         width={100}
@@ -110,7 +110,7 @@ render(
 import { Flex, Image, BrowserWindow } from 'camara';
 
 render(
-  <BrowserWindow>
+  <BrowserWindow docs>
     <Flex direction="row">
       <Image
         width={100}
@@ -142,7 +142,7 @@ render(
 import { Flex, Image, BrowserWindow } from 'camara';
 
 render(
-  <BrowserWindow>
+  <BrowserWindow docs>
     <Flex direction="row" justify="space-between">
       <Image
         width={100}
@@ -172,7 +172,7 @@ render(
 import { Flex, Image, BrowserWindow } from 'camara';
 
 render(
-  <BrowserWindow>
+  <BrowserWindow docs>
     <Flex direction="row" justify="space-around">
       <Image
         width={100}
@@ -202,7 +202,7 @@ render(
 import { Flex, Image, BrowserWindow } from 'camara';
 
 render(
-  <BrowserWindow>
+  <BrowserWindow docs>
     <Flex direction="row" justify="space-evenly">
       <Image
         width={100}
@@ -232,7 +232,7 @@ render(
 import { Flex, Image, BrowserWindow } from 'camara';
 
 render(
-  <BrowserWindow>
+  <BrowserWindow docs>
     <Flex direction="row" justify="center">
       <Image
         width={100}
@@ -262,7 +262,7 @@ render(
 import { Flex, Image, BrowserWindow } from 'camara';
 
 render(
-  <BrowserWindow>
+  <BrowserWindow docs>
     <Flex direction="row" justify="flex-start">
       <Image
         width={100}
@@ -292,7 +292,7 @@ render(
 import { Flex, Image, BrowserWindow } from 'camara';
 
 render(
-  <BrowserWindow>
+  <BrowserWindow docs>
     <Flex direction="row" justify="flex-end">
       <Image
         width={100}
@@ -322,7 +322,7 @@ render(
 import { Flex, Image, BrowserWindow } from 'camara';
 
 render(
-  <BrowserWindow>
+  <BrowserWindow docs>
     <Flex wrap direction="row" justify="space-between">
       <Image
         width={170}
@@ -382,7 +382,7 @@ render(
 import { Flex, Image, BrowserWindow } from 'camara';
 
 render(
-  <BrowserWindow>
+  <BrowserWindow docs>
     <Flex
       wrap
       direction="row"
