--- a/website/pages/docs/components/heading.mdx
+++ b/website/pages/docs/components/heading.mdx
@@ -42,7 +42,7 @@ Heading properties
 import { Box, Heading, BrowserWindow } from 'camara';
 
 render(
-  <BrowserWindow>
+  <BrowserWindow docs>
     <Box>
       <Heading level={1}>Intelligence designed to be helpful.</Heading>
       <Heading level={2}>Intelligence designed to be helpful.</Heading>
@@ -57,7 +57,7 @@ render(
 import { Box, Heading, BrowserWindow } from 'camara';
 
 render(
-  <BrowserWindow>
+  <BrowserWindow docs>
     <Box>
       <Heading level={1}>
         役立つように設計されたインテリジェンス。Yakudatsu yō ni sekkei sa reta
@@ -86,7 +86,7 @@ render(
 import { Box, Heading, BrowserWindow } from 'camara';
 
 render(
-  <BrowserWindow>
+  <BrowserWindow docs>
     <Box>
       <Heading thin level={1}>
         Intelligence designed to be helpful.
@@ -130,7 +130,7 @@ render(
 import { Box, Heading, BrowserWindow } from 'camara';
 
 render(
-  <BrowserWindow>
+  <BrowserWindow docs>
     <Box>
       <Heading align="left" level={1}>
         Intelligence designed to be helpful.
@@ -155,7 +155,7 @@ render(
 import { Box, Heading, BrowserWindow } from 'camara';
 
 render(
-  <BrowserWindow>
+  <BrowserWindow docs>
     <Box>
       <Heading color="tomato" level={1}>
         Intelligence designed to be helpful.
