--- a/website/pages/docs/components/image.mdx
+++ b/website/pages/docs/components/image.mdx
@@ -42,7 +42,7 @@ Image properties
 import { Image, BrowserWindow } from 'camara';
 
 render(
-  <BrowserWindow>
+  <BrowserWindow docs>
     <Image
       src="https://source.unsplash.com/V_WBdOLOgJU/600x500"
       alt="woman in orange knit cap and blue jacket"
@@ -57,7 +57,7 @@ render(
 import { Flex, Image, BrowserWindow } from 'camara';
 
 render(
-  <BrowserWindow>
+  <BrowserWindow docs>
     <Flex justify="space-between">
       <Image
         width="49%"
