--- a/website/pages/docs/components/inputField.mdx
+++ b/website/pages/docs/components/inputField.mdx
@@ -45,7 +45,7 @@ InputField properties
 import { InputField, BrowserWindow } from 'camara';
 
 render(
-  <BrowserWindow>
+  <BrowserWindow docs>
     <InputField placeholder="Type something here" />
   </BrowserWindow>
 );
@@ -57,7 +57,7 @@ render(
 import { Box, InputField, BrowserWindow } from 'camara';
 
 render(
-  <BrowserWindow>
+  <BrowserWindow docs>
     <Box>
       <InputField label="First Name" />
       <InputField label="Last Name" />
@@ -72,7 +72,7 @@ render(
 import { Flex, InputField, BrowserWindow } from 'camara';
 
 render(
-  <BrowserWindow>
+  <BrowserWindow docs>
     <Flex>
       <InputField inline label="First Name" />
       <InputField inline label="Last Name" />
@@ -87,7 +87,7 @@ render(
 import { Flex, InputField, BrowserWindow } from 'camara';
 
 render(
-  <BrowserWindow>
+  <BrowserWindow docs>
     <Flex>
       <InputField
         label="Email Address"
@@ -110,7 +110,7 @@ render(
 import { Flex, InputField, BrowserWindow } from 'camara';
 
 render(
-  <BrowserWindow>
+  <BrowserWindow docs>
     <Flex>
       <InputField required label="First Name" />
       <InputField required label="Last Name" />
@@ -125,7 +125,7 @@ render(
 import { Flex, InputField, BrowserWindow } from 'camara';
 
 render(
-  <BrowserWindow>
+  <BrowserWindow docs>
     <Flex>
       <InputField required placeholder="First Name" />
       <InputField required placeholder="Last Name" />
@@ -140,7 +140,7 @@ render(
 import { Flex, InputField, BrowserWindow } from 'camara';
 
 render(
-  <BrowserWindow>
+  <BrowserWindow docs>
     <Flex>
       <InputField disabled required placeholder="First Name" />
       <InputField disabled required placeholder="Last Name" />
