--- a/website/pages/docs/components/spacer.mdx
+++ b/website/pages/docs/components/spacer.mdx
@@ -41,7 +41,7 @@ Spacer properties
 import { Box, Button, Spacer, BrowserWindow } from 'camara';
 
 render(
-  <BrowserWindow>
+  <BrowserWindow docs>
     <Box width={300}>
       <Button block>No Spacing</Button>
       <Spacer top>
@@ -58,7 +58,7 @@ render(
 import { Box, Button, Spacer, BrowserWindow } from 'camara';
 
 render(
-  <BrowserWindow>
+  <BrowserWindow docs>
     <Box width={300}>
       <Spacer bottom>
         <Button block>Spacing Bottom</Button>
@@ -75,7 +75,7 @@ render(
 import { Box, Button, Spacer, BrowserWindow } from 'camara';
 
 render(
-  <BrowserWindow>
+  <BrowserWindow docs>
     <Box width={300}>
       <Button block>No Spacing</Button>
       <Spacer both>
