--- a/website/pages/docs/components/tag.mdx
+++ b/website/pages/docs/components/tag.mdx
@@ -40,7 +40,7 @@ Tag properties
 import { Tag, BrowserWindow } from 'camara';
 
 render(
-  <BrowserWindow>
+  <BrowserWindow docs>
     <Tag>Tag</Tag>
   </BrowserWindow>
 );
@@ -52,7 +52,7 @@ render(
 import { Flex, Tag, BrowserWindow } from 'camara';
 
 render(
-  <BrowserWindow>
+  <BrowserWindow docs>
     <Flex>
       <Tag color="#e61b1b">red</Tag>
       <Tag color="#0099FF">blue</Tag>
@@ -70,7 +70,7 @@ render(
 import { Box, Flex, Tag, BrowserWindow } from 'camara';
 
 render(
-  <BrowserWindow>
+  <BrowserWindow docs>
     <Box>
       {/* large */}
       <Flex>
