--- a/website/pages/docs/components/text.mdx
+++ b/website/pages/docs/components/text.mdx
@@ -48,7 +48,7 @@ Text properties
 import { Text, BrowserWindow } from 'camara';
 
 render(
-  <BrowserWindow>
+  <BrowserWindow docs>
     <Text>This is a text component</Text>
   </BrowserWindow>
 );
@@ -60,7 +60,7 @@ render(
 import { Box, Text, BrowserWindow } from 'camara';
 
 render(
-  <BrowserWindow>
+  <BrowserWindow docs>
     <Box>
       <Text variant="body">Live Text translation</Text>
       <Text variant="sub-heading">Live Text translation</Text>
@@ -88,7 +88,7 @@ render(
 import { Box, Text, BrowserWindow } from 'camara';
 
 render(
-  <BrowserWindow>
+  <BrowserWindow docs>
     <Box>
       <Text weight="bold">
         There is so much rich information in your photos, from memorable places
@@ -136,7 +136,7 @@ render(
 import { Box, Text, BrowserWindow } from 'camara';
 
 render(
-  <BrowserWindow>
+  <BrowserWindow docs>
     <Box>
       <Text italic>
         There is so much rich information in your photos, from memorable places
@@ -165,7 +165,7 @@ render(
 import { Text, BrowserWindow } from 'camara';
 
 render(
-  <BrowserWindow>
+  <BrowserWindow docs>
     <Text inline weight="bold">
       There is so much rich information in your photos, from memorable places
       you’ve visited to handwritten family recipes. iOS 15 uses secure on-device
@@ -186,7 +186,7 @@ render(
 import { Box, Text, BrowserWindow } from 'camara';
 
 render(
-  <BrowserWindow>
+  <BrowserWindow docs>
     <Box>
       <Text align="left">
         There is so much rich information in your photos, from memorable places
@@ -266,7 +266,7 @@ render(
 import { Box, Text, BrowserWindow } from 'camara';
 
 render(
-  <BrowserWindow>
+  <BrowserWindow docs>
     <Box>
       <Text underline>
         There is so much rich information in your photos, from memorable places
@@ -295,7 +295,7 @@ render(
 import { Box, Text, BrowserWindow } from 'camara';
 
 render(
-  <BrowserWindow>
+  <BrowserWindow docs>
     <Box>
       <Text size="large">
         There is so much rich information in your photos, from memorable places
@@ -359,7 +359,7 @@ render(
 import { Box, Text, BrowserWindow } from 'camara';
 
 render(
-  <BrowserWindow>
+  <BrowserWindow docs>
     <Box>
       <Text strike>
         There is so much rich information in your photos, from memorable places
