--- a/website/pages/docs/components/textarea.mdx
+++ b/website/pages/docs/components/textarea.mdx
@@ -48,7 +48,7 @@ TextArea properties
 import { TextArea, BrowserWindow } from 'camara';
 
 render(
-  <BrowserWindow>
+  <BrowserWindow docs>
     <TextArea placeholder="Type something here" />
   </BrowserWindow>
 );
@@ -60,7 +60,7 @@ render(
 import { Flex, TextArea, BrowserWindow } from 'camara';
 
 render(
-  <BrowserWindow>
+  <BrowserWindow docs>
     <Flex>
       <TextArea label="Description" helperText="example@gmail.com" />
       <TextArea
@@ -78,7 +78,7 @@ render(
 import { Flex, TextArea, BrowserWindow } from 'camara';
 
 render(
-  <BrowserWindow>
+  <BrowserWindow docs>
     <Flex>
       <TextArea required label="First Name" />
       <TextArea required label="Last Name" />
@@ -93,7 +93,7 @@ render(
 import { Flex, TextArea, BrowserWindow } from 'camara';
 
 render(
-  <BrowserWindow>
+  <BrowserWindow docs>
     <Flex>
       <TextArea required placeholder="First Name" />
       <TextArea required placeholder="Last Name" />
@@ -108,7 +108,7 @@ render(
 import { Flex, TextArea, BrowserWindow } from 'camara';
 
 render(
-  <BrowserWindow>
+  <BrowserWindow docs>
     <Flex>
       <TextArea disabled required placeholder="First Name" />
       <TextArea disabled required placeholder="Last Name" />
@@ -123,7 +123,7 @@ render(
 import { Flex, TextArea, BrowserWindow } from 'camara';
 
 render(
-  <BrowserWindow>
+  <BrowserWindow docs>
     <Flex>
       <TextArea resizable required placeholder="First Name" />
       <TextArea resizable required placeholder="Last Name" />
