refactor(spacer): rewrite spacer component to support system props

--- a/website/pages/docs/changelog.mdx
+++ b/website/pages/docs/changelog.mdx
@@ -12,30 +12,47 @@ order: 7
 ## September 2021
 
 - `Box Component`:
+
   - Remove `css` props for additional css properties
   - Clean up other properties
   - Fix spacing system props
 
+- `Spacer Component`:
+  - Add support for system props
+
 ## August 2021
 
 - `Flex Component`:
+
   - Added `alignContent, alignItems, alignSelf, wrap, direction,` props to the flex component
+
 - `Heading Component`
+
   - Added `color` props to heading component
   - Added `noWhiteSpace` prop to heading component
+
 - `Text Component`
+
   - Added `color` props to text component
   - Added `fontSize` props to text component
+
 - Create new component `Three-Pane-Window`
+
 - `BrowserWindow`
+
   - Update layout in storybook full screen mode
   - Fix layout inconsistency
+
 - `Avatar Component`:
+
   - `Username` prop no longer uses substring to split the initials. Provide the already split initials yourself.
+
 - `Box`
+
   - Add `width` props to box component
   - Add proper support for `css` props to add additional properties
   - Add spacing system props
+
 - Create new component `List`
 
 ## July 2021
