feat: revert back to stitches v0.2.2, update anchor component
revert backs stitches update to version 0.2.2 as SSR is broken on the update. Also adds support for
system props to Anchor component, and support for additional css.

--- a/website/pages/docs/changelog.mdx
+++ b/website/pages/docs/changelog.mdx
@@ -18,7 +18,12 @@ order: 7
   - Fix spacing system props
 
 - `Spacer Component`:
+
   - Add support for system props
+
+- `Anchor Component`:
+  - Add support for system props
+  - Add support for `css` props
 
 ## August 2021
 
